# svg_path

./: CMakeLists.txt  LICENSE  README.md
include/svg_path/: basic.h  numberlist.h  path.h  transform.h
src/: CMakeLists.txt  basic.cpp  numberlist.cpp  path.cpp  transform.cpp
test/: CMakeLists.txt  test_svg_path.cpp
