FIND_PACKAGE(Boost 1.52.0 REQUIRED)

IF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
ENDIF()

INCLUDE_DIRECTORIES(${CXXCAM_INCLUDE_DIR}/svg_path ${Boost_INCLUDE_DIRS})
ADD_LIBRARY(svg_path STATIC basic.cpp path.cpp transform.cpp)
TARGET_LINK_LIBRARIES(svg_path ${Boost_LIBRARIES})
